avoid showing scrollbar on sidebar while scaling

--- a/static/sass/simple-sidebar.sass
+++ b/static/sass/simple-sidebar.sass
@@ -31,7 +31,7 @@ body
     width: 0
     height: $SIDEBAR_HEIGHT
     margin-left: 0 - $SIDEBAR_WIDTH
-    overflow-y: hidden
+    overflow: hidden
     background: $SIDEBAR_BACKGROUND
     -webkit-transition: all 0.5s ease
     -moz-transition: all 0.5s ease
